--- a/index.html
+++ b/index.html
@@ -35,5 +35,22 @@
             <a class="button-topsection" href="www.google.com" target="_blanl">Download Resume</a>
         </div>
     </section>
+
+    <section class="third-section">
+        <h2>Experiences</h2>
+        <div id="exp-border" class="half-width box-section">
+            <h1 class="thirdSection-h1">Full Stack Web Development</h1>
+            <h3 class="name-h1">2021 - present | Pro Level Developer</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit nemo non quisquam? Ea, commodi provident! Non, laudantium inventore suscipit ipsum sequi alias. Doloribus dicta ipsam ipsa nulla sed iure quod?</p>
+        </div>
+        <div id="exp-border-two" class="half-width box-section">
+            <h1 class="thirdSection-h1">Baby Web Developer</h1>
+            <h3 class="name-h1">2020 - 21 | Programming Hero Learner</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam error exercitationem assumenda, debitis incidunt aut ex deleniti doloremque eveniet at. Tempore deleniti totam accusamus minus magni perspiciatis dolorem ab ad.</p>
+        </div>
+    </section>
+    <footer>
+        <p>2022 copyright all is reserved by Faishal Ahmed Emon</p>
+    </footer>
 </body>
 </html>
